--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
+    "react-spinners": "^0.5.3",
     "reactstrap": "^7.1.0",
     "typeface-roboto": "0.0.54"
   },
